Foi desenvolvido o corpo inicial do HTML

--- a/index.html
+++ b/index.html
@@ -5,8 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pod Request Landing Page</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     
+    <div class="corpo">
+
+        <div class="icon">
+            <img src="" alt="pod-icon">
+            <h1>pod</h1> <!--this must be an inline block-->
+        </div>
+
+        <div class="main-area">
+            <div class="titulo">
+                <h1>PUBLISH YOUT PODCASTS</h1>
+                <H1>EVERYWHERE</H1>
+            </div>
+
+            <div class="description">
+                <p>Upload your audio to Pod with a single click. We'll the distribute your podcast to Spotify, Apple Podcasts, Google Podcasts, Pocket Casts and more!</p> 
+            </div>
+
+            <div class="email-field">
+
+                <input type="email" required name="email" id="nome" size="35" placeholder="Email address" > 
+
+                <div class="botao">
+                <input type="button" id="botao" size="20" value="enviar">
+                </div>
+            </div>
+
+            <div class="platforms">
+
+            </div>
+        </div>
+
+
+    </div>
+
 </body>
+
 </html>
