--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 
                 <div class="platforms">
                     <!--plataformas-->
+                    <img src="./images/spotify.png" alt="spotify" style="height: 20px;">
+                    <img src="./images/apple-podcasts.png" alt="spotify" style="height: 20px;">
+                    <img src="./images/google-podcasts.png" alt="google pod" style="height: 20px;">
+                    <img src="./images/pocket-casts.png" alt="pocket cast" style="height: 20px;">
                 </div>
             </div>
         </div>
