--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100&display=swap');
     </style>
+    
+    <script src="sweetalert2.all.min.js"></script>
    
     <div class="corpo">
 
