Ativação do submmit button através do 'Enter', no teclado

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <input type="email" required name="email" id="email" size="35" placeholder="Email address" > 
 
                     <div class="botao">
-                    <input type="submit" id="botao" size="20" value="enviar">
+                    <input type="submit" id="botao" size="20" value="enviar" autofocus>
                     </div>
                 </div>
 
